# QuadBalance

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: use-uv.mdc
src/quadbalance/: __init__.py  artifacts.py  asset_universe.py  assets.py  behavior_stress.py  benchmarks.py  cli.py  config.py  corporate_actions.py  cross_border_stress.py  data.py  db.py  evaluation_pipeline.py  execution_friction.py  fees.py  instrument_catalog.py  instrument_pool.py  ledger.py  lock_integrity.py  lock_registry.py  lock_selection.py  lock_shortlist.py  long_term_stress.py  metrics.py  orchestration_helpers.py  path_stress.py  paths.py  portfolio_templates.py  product_risk.py  profile_thresholds.py  proxy_sensitivity.py  rebalance_guidance.py  reporting.py  reporting_sections.py  simulator.py  single_run.py  (+8 more)
tests/: test_backtest.py  test_criterion3_calibration.py  test_criterion3_review_vs_fail.py  test_data.py  test_drawdown_and_stress_gap_coverage.py  test_events_and_artifacts.py  test_fees.py  test_instrument_pool.py  test_lock_document_snapshot.py  test_lock_selection.py  test_lock_shortlist.py  test_lock_shortlist_sweep.py  test_lt1_purchasing_power.py  test_module_boundaries.py  test_nav_continuity.py  test_profile_suitability.py  test_profile_thresholds.py  test_qdii_quota.py  test_rebalance_shortfall.py  test_remaining_metric_fixes.py  test_reporting_sections.py  test_stock_sub_split.py  test_stress_and_nav_fixes.py  test_stress_runtime.py  test_stress_s4.py  test_sweep_long_term_deferral.py  test_twr_metrics.py  test_validation_hard_flaws.py  test_workbench_core.py
(+159 files in other folders)
