[project]
name = "quadbalance"
version = "0.1.0"
description = "QuadBalance — China four-quadrant portfolio backtest engine"
readme = "README.md"
authors = [
    { name = "Stove663", email = "yinlu91@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.64",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
quadbalance = "quadbalance.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
